--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/myprocodingwithpratyaymondal/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active" >
-                    <a class="nav-link" href="myprocodingwithpratyaymondal/">About</a>
+                    <a class="nav-link" href="#">About</a>
                 </li>
 
 
