--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/myprocodingwithpratyaymondal/">Pro-Coder</a>
+        <a class="navbar-brand" href="/Pro-coder/">Pro-Coder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/myprocodingwithpratyaymondal/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/Pro-coder/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/myprocodingwithpratyaymondal/about.html">About</a>
+                    <a class="nav-link" href="/Pro-coder/about.html">About</a>
                 </li>
 
 
